Corrije funções de adicionar usuario, comentario e livros

--- a/pastamodel/appmodelo/templates/editar_usuario.html
+++ b/pastamodel/appmodelo/templates/editar_usuario.html
@@ -7,3 +7,16 @@
     <button type="submit" class="btn btn-primary">Salvar</button>
 </form>
 {% endblock %}
+
+{% if form.errors %}
+        <div class="alert alert-danger">
+            <strong>Ocorreu um erro:</strong>
+            <ul>
+                {% for field, errors in form.errors.items %}
+                    {% for error in errors %}
+                        <li>{{ field|title }}: {{ error }}</li>
+                    {% endfor %}
+                {% endfor %}
+            </ul>
+        </div>
+    {% endif %}
