--- a/pastamodel/appmodelo/templates/home.html
+++ b/pastamodel/appmodelo/templates/home.html
@@ -44,7 +44,7 @@
 <body>
     <nav class="navbar navbar-expand-md navbar-dark fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="#">Biblioteca</a>
+            <a class="navbar-brand" href="{% url 'home' %}">Biblioteca</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
