--- a/pastamodel/appmodelo/templates/detalhes_comentario.html
+++ b/pastamodel/appmodelo/templates/detalhes_comentario.html
@@ -1,5 +1,4 @@
-{% extends 'base.html' %}
-{% block content %}
+{% extends 'Header.html' %} {% block content %}
 <h2>Detalhes do Comentário</h2>
 <p><strong>ID:</strong> {{ comentario.id }}</p>
 <p><strong>Livro:</strong> {{ comentario.livro.titulo }}</p>
@@ -7,6 +6,10 @@
 <p><strong>Comentário:</strong> {{ comentario.comentario }}</p>
 <p><strong>Classificação:</strong> {{ comentario.classificacao }}</p>
 <p><strong>Data do Comentário:</strong> {{ comentario.data_comentario }}</p>
-<a href="{% url 'editar_comentario' comentario.id %}" class="btn btn-primary">Editar</a>
-<a href="{% url 'lista_comentarios' %}" class="btn btn-secondary">Voltar para Lista</a>
+<a href="{% url 'editar_comentario' comentario.id %}" class="btn btn-primary"
+  >Editar</a
+>
+<a href="{% url 'lista_comentarios' %}" class="btn btn-secondary"
+  >Voltar para Lista</a
+>
 {% endblock %}
