--- a/pastamodel/appmodelo/templates/detalhes_livro.html
+++ b/pastamodel/appmodelo/templates/detalhes_livro.html
@@ -1,5 +1,4 @@
-{% extends 'base.html' %}
-{% block content %}
+{% extends 'Header.html' %} {% block content %}
 <h2>Detalhes do Livro</h2>
 <p><strong>ID:</strong> {{ livro.id }}</p>
 <p><strong>Título:</strong> {{ livro.titulo }}</p>
@@ -7,5 +6,7 @@
 <p><strong>Gênero:</strong> {{ livro.genero.nome }}</p>
 <p><strong>Editora:</strong> {{ livro.editora.nome }}</p>
 <a href="{% url 'editar_livro' livro.id %}" class="btn btn-primary">Editar</a>
-<a href="{% url 'lista_livros' %}" class="btn btn-secondary">Voltar para Lista</a>
+<a href="{% url 'lista_livros' %}" class="btn btn-secondary"
+  >Voltar para Lista</a
+>
 {% endblock %}
