--- a/pastamodel/appmodelo/templates/editar_autor.html
+++ b/pastamodel/appmodelo/templates/editar_autor.html
@@ -1,7 +1,9 @@
-{% extends 'Header.html' %} {% block content %}
-<h2>Editar Autor</h2>
-<form method="post">
-  {% csrf_token %} {{ form.as_p }}
-  <button type="submit" class="btn btn-primary">Salvar</button>
-</form>
-{% endblock %}
+<main>
+  {% extends 'Header.html' %} {% block content %}
+  <h2>Editar Autor</h2>
+  <form method="post">
+    {% csrf_token %} {{ form.as_p }}
+    <button type="submit" class="btn btn-primary">Salvar</button>
+  </form>
+  {% endblock %}
+</main>
