--- a/pastamodel/appmodelo/static/css/style.css
+++ b/pastamodel/appmodelo/static/css/style.css
@@ -18,3 +18,72 @@ body {
 .nav-item a:hover {
   color: #b6b6b6 !important;
 }
+
+.dropdown-menu a {
+  color: #343a40 !important;
+  transition: 0.3s;
+}
+
+.dropdown-menu a:hover {
+  color: #e64c3c !important;
+  border-bottom: 1px solid #e64c3c;
+}
+
+/* */
+
+.card-container {
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  padding: 20px;
+}
+
+.card {
+  width: 350px;
+  background-color: #f4f4f4;
+  border: none !important;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+  text-align: left;
+  cursor: pointer;
+}
+
+.card:hover {
+  transform: translateY(-10px);
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3);
+}
+
+.card-content {
+  border-top: 1px solid #b6b6b648;
+}
+
+.btn-card {
+  background-color: #e64c3c;
+  color: #fff;
+  width: 160px;
+}
+
+.btn-card:hover {
+  background-color: transparent;
+  color: #e64c3c;
+  width: 160px;
+  border: 1px solid #e64c3c;
+}
+
+.add {
+  background-color: transparent !important;
+  color: #e64c3c;
+}
+
+.add:hover {
+  background-color: transparent !important;
+  color: #e64c3c;
+  border: 1px solid #e64c3c;
+}
+
+.card-publish-date {
+  border-top: 1px solid #b6b6b648;
+}
+
+.card-publish-date i {
+  color: #afafaf !important;
+}
