--- a/pastamodel/appmodelo/templates/Header.html
+++ b/pastamodel/appmodelo/templates/Header.html
@@ -16,7 +16,7 @@
     />
   </head>
   <body>
-    <nav class="navbar navbar-expand-md navbar-dark fixed-top">
+    <nav class="navbar navbar-expand-md navbar-dark">
       <div class="container">
         <a class="navbar-brand" href="{% url 'home' %}">
           <img
@@ -54,6 +54,60 @@
             <li class="nav-item">
               <a class="nav-link" href="{% url 'lista_usuarios' %}">Usuários</a>
             </li>
+
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                Gerenciamento
+              </a>
+              <ul class="dropdown-menu">
+                <li>
+                  <a class="dropdown-item" href="{% url 'lista_livros' %}"
+                    >Livros</a
+                  >
+                </li>
+                <li>
+                  <a class="dropdown-item" href="{% url 'lista_editoras' %}"
+                    >Editoras</a
+                  >
+                </li>
+                <li>
+                  <a class="dropdown-item" href="{% url 'lista_generos' %}"
+                    >Gêneros</a
+                  >
+                </li>
+                <li>
+                  <a class="dropdown-item" href="{% url 'lista_autores' %}"
+                    >Autores</a
+                  >
+                </li>
+                <li>
+                  <a class="dropdown-item" href="{% url 'lista_emprestimos' %}"
+                    >Empréstimos</a
+                  >
+                </li>
+                <li>
+                  <a class="dropdown-item" href="{% url 'lista_exemplares' %}"
+                    >Exemplares</a
+                  >
+                </li>
+                <li>
+                  <a class="dropdown-item" href="{% url 'lista_multas' %}"
+                    >Multas</a
+                  >
+                </li>
+                <li>
+                  <a class="dropdown-item" href="{% url 'lista_reservas' %}"
+                    >Reservas</a
+                  >
+                </li>
+              </ul>
+            </li>
           </ul>
         </div>
       </div>
@@ -62,5 +116,14 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script
+      src="https://kit.fontawesome.com/e4264bec92.js"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
