--- a/pastamodel/appmodelo/static/css/style.css
+++ b/pastamodel/appmodelo/static/css/style.css
@@ -33,13 +33,17 @@ body {
 
 .card-container {
   display: flex;
+  flex-wrap: wrap;
   justify-content: left;
   align-items: center;
   padding: 20px;
 }
 
 .card {
-  width: 350px;
+  width: 345px;
+  min-width: 345px;
+  height: 200px;
+  min-height: 200px;
   background-color: #f4f4f4;
   border: none !important;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
@@ -52,20 +56,34 @@ body {
   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3);
 }
 
+.card-img img {
+  width: 345px;
+  min-width: 345px;
+  min-height: 200px;
+  height: 200px;
+}
+
+.card-title {
+  height: 70px;
+  min-height: 70px;
+}
+
 .card-content {
   border-top: 1px solid #b6b6b648;
+  height: 100px;
+  min-height: 100px;
 }
 
 .btn-card {
   background-color: #e64c3c;
   color: #fff;
   width: 160px;
+  min-width: 160px;
 }
 
 .btn-card:hover {
   background-color: transparent;
   color: #e64c3c;
-  width: 160px;
   border: 1px solid #e64c3c;
 }
 
