--- a/pastamodel/appmodelo/templates/Header.html
+++ b/pastamodel/appmodelo/templates/Header.html
@@ -112,6 +112,7 @@
         </div>
       </div>
     </nav>
+    <div class="container-fluid m-5">{% block base %} {% endblock %}</div>
     <div class="container mt-4">{% block content %} {% endblock %}</div>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
