--- a/pastamodel/appmodelo/templates/editar_livro.html
+++ b/pastamodel/appmodelo/templates/editar_livro.html
@@ -1,6 +1,6 @@
 {% extends 'Header.html' %} {% block content %}
 <h2>Editar Livro</h2>
-<form method="post">
+<form method="post" enctype="multipart/form-data">
   {% csrf_token %} {{ form.as_p }}
   <button type="submit" class="btn btn-primary">Salvar</button>
 </form>
