relatório de livros

--- a/pastamodel/appmodelo/templates/base.html
+++ b/pastamodel/appmodelo/templates/base.html
@@ -16,6 +16,8 @@
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'lista_generos' %}">Gêneros</a>
+                    <a href="{% url 'relatorio_livros' %}">Gerar Relatório de Livros</a>
+
                 </li>
                 <!-- Adicione aqui links para outras páginas principais -->
             </ul>
