--- a/pastamodel/appmodelo/templates/Header.html
+++ b/pastamodel/appmodelo/templates/Header.html
@@ -45,7 +45,7 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" href="{% url 'lista_funcionarios' %}"
-                >Funcionarios</a
+                >Funcionários</a
               >
             </li>
             <li class="nav-item">
